[gcr] Fix broken dispose of GcrCertificateWidget

Dispose and finalize of the gcr widgets was broken.

https://bugzilla.gnome.org/show_bug.cgi?id=631840